--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #ffffff;
+  color: #212121;
+  font-size: 16px;
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(33,33,33,.5);
   float: left;
   position: fixed;
   width: 100%;
@@ -42,11 +43,45 @@ li {
   padding: 30px;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #D70D0D;
+}
+
 article {
   padding-top: 100px;
+}
+
+figcaption {
+  font-size: .75em;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+h1 {
+  font-size: 2em;
+  font-weight: bold;
+  padding-top: 20px;
+}
+
+h3 {
+  padding-top: 20px;
+}
+
+.author{
+  padding-top: 20px;
+  font-size: .75em;
 }
 
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+p {
+  line-height: 1.25em;
+  padding-top: 20px;
 }
